@@ -203,12 +203,6 @@ SEXP attribute_hidden do_relop_dflt(SEXP call, SEXP op, SEXP x, SEXP y)
 
     /* ELSE :  x and y are both atomic or list */
 
-    // FIXME: typically *not* ok if x or y is array
-    if (XLENGTH(x) <= 0 || XLENGTH(y) <= 0) {
-	UNPROTECT(2);
-	return allocVector(LGLSXP, 0);
-    }
-
     Rboolean
 	xarray = isArray(x),
 	yarray = isArray(y),
@@ -257,10 +251,11 @@ SEXP attribute_hidden do_relop_dflt(SEXP call, SEXP op, SEXP x, SEXP y)
 	}
     }
 
-    if (nx > 0 && ny > 0 &&
-	((nx > ny) ? nx % ny : ny % nx) != 0) { // mismatch
-	warningcall(call, _("longer object length is not a multiple of shorter object length"));
-    }
+  if (nx > 0 && ny > 0) {
+	if(((nx > ny) ? nx % ny : ny % nx) != 0) // mismatch
+            warningcall(call, _(
+		"longer object length is not a multiple of shorter object length"));
+
     if (isString(x) || isString(y)) {
 	REPROTECT(x = coerceVector(x, STRSXP), xpi);
 	REPROTECT(y = coerceVector(y, STRSXP), ypi);
@@ -291,8 +286,9 @@ SEXP attribute_hidden do_relop_dflt(SEXP call, SEXP op, SEXP x, SEXP y)
 	REPROTECT(y = coerceVector(y, RAWSXP), ypi);
 	x = raw_relop((RELOP_TYPE) PRIMVAL(op), x, y);
     } else errorcall(call, _("comparison of these types is not implemented"));
-
-
+  } else { // nx == 0 || ny == 0
+	x = allocVector(LGLSXP, 0);
+  }
     PROTECT(x);
     if (dims != R_NilValue) {
 	setAttrib(x, R_DimSymbol, dims);
